syntax = "proto2";
import "draios.proto";

package draiosproto_w_metrics_list;

message metrics_list {
    repeated draiosproto.metrics metrics = 1;
}